examples/test/testpolicy594.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy594
  namespace: namespace74
spec:
  podSelector:
    matchLabels:
      key13: value36
      key18: value2
      key6: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value29
          key27: value29
      podSelector:
        matchLabels:
          key36: value10
          key40: value18
